# ruchat

./: .gitignore  CONTEXT.md  Cargo.toml  INSTALL.md  LICENSE  ORCHESTRATION.md  README.md  ROADMAP.md  TODO.md  TODO.txt  db_config.json  embed_cargo_build.sh  embed_history.sh  embed_script.sh  examples_ses.sh  ruchat  ruchat.json  ruchat_embed.sh  start_chroma.sh  working.sh  zip_up.sh
agent_debug/: architect_librarian_and_worker.json  architect_librarian_worker_validator.json  architect_only.json  critic.json  debug_sequences.md  librarian_and_worker.json  librarian_only.json  multiple_critics.json  summarizer.json  validator_only.json  worker_and_validator.json  worker_and_validator_rejection.json
etc/: file_extensions.txt  language_specifics.txt
questions/: ask_rename_fn.txt
scripts/: build_and_commit.sh  generated_workflow.sh  generated_workflow_orig.sh  modify_function_signature.pl  orchestrator.sh  pipe_ses.sh  rename_fn.pl  rename_local_var.pl  revised_supervisor.sh  ruchat_orchestrator.sh  self_healing_ma_script.sh  setup_storage.sh  supervisor.sh  task_manager.sh  unit_test_sanitizer.sh
src/: arg_utils.rs  args.rs  bufcursor.rs  chat_io.rs  chroma.rs  chroma_ls.rs  chroma_query.rs  chroma_similarity_search.rs  cli.rs  config.rs  conversation_tree.rs  core.rs  embed.rs  error.rs  io.rs  lib.rs  main.rs  ollama.rs  ollama_ask.rs  ollama_chat.rs  ollama_embed.rs  ollama_error.rs  ollama_func.rs  ollama_func_struct.rs  ollama_query.rs  options.rs  prompt.rs  subcommand.rs  tui.rs  utils.rs
src/agent/: manager.rs  mod.rs  team.rs  worker.rs
src/chroma/: client.rs  collection.rs  delete.rs  get_options.rs  ls.rs  metadata.rs  mod.rs  query.rs  similarity.rs
src/cli/: args.rs  config.rs  mod.rs  options.rs  prompt.rs  serde.rs
src/config/: args.rs  mod.rs
src/core/: agent.rs  embed.rs  mod.rs  orchestrator.rs
src/core/agent/: manager.rs  protocol.rs  role.rs  team.rs  types.rs  worker.rs
src/core/chat/: tree.rs
src/core/orchestrator/: git.rs  mod.rs  task.rs
src/ollama/: ask.rs  mod.rs  model.rs  pipe.rs  server.rs
src/ollama/chat/: bufcursor.rs  conversation_tree.rs  event_result.rs  history.rs  mod.rs  pos.rs
src/ollama/func/: mod.rs  strukt.rs
src/ollama/model/: ls.rs  mod.rs  pull.rs  rm.rs
src/orchestrator/: mod.rs
src/providers/: llm.rs  mod.rs
src/providers/llm/: ollama.rs
src/providers/llm/ollama/: ask.rs  chat.rs  func.rs  mod.rs  model.rs  server.rs
src/providers/vector/: chroma.rs  mod.rs
src/providers/vector/chroma/: client.rs  collection.rs  create.rs  delete.rs  fork.rs  get.rs  get_options.rs  include.rs  ls.rs  modify.rs  (+7 more)
src/tui/: io.rs
src/utils/: error.rs  mod.rs
(+5 files in other folders)
